--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </header>
   <main>
     <div class="row red-group">
-      <h2 class="title">Offensive Files - Contains Credit Card and Social Security Numbers</h2>
+      <h2 class="title">These files contain either Credit Card and/or US Social Security Numbers</h2>
       <div class="box-group">
         <div class="box" onclick="window.location.href = 'https://github.com/ftntdlp/dlp-test-files/blob/main/ssn-cc.doc?raw=true';">
           <h3>DOC File</h3>
@@ -82,23 +82,6 @@
           <h3>ZIP File</h3>
         </div>
         <div class="box" onclick="window.open('https://github.com/ftntdlp/dlp-test-files/blob/main/ssn.txt?raw=true', '_blank');">
-          <h3>TXT File</h3>
-        </div>
-      </div>
-    </div>
-    <div class="row blue-group">
-      <h2 class="title">Sanitised Files - Do not contain any Credit Card or Social Security Numbers</h2>
-      <div class="box-group">
-        <div class="box" onclick="window.location.href = 'https://github.com/ftntdlp/dlp-test-files/blob/main/no-ssn-cc.doc?raw=true';">
-          <h3>DOC File</h3>
-        </div>
-        <div class="box" onclick="window.location.href = 'https://github.com/ftntdlp/dlp-test-files/blob/main/no-ssn-cc.pdf?raw=true';">
-          <h3>PDF File</h3>
-        </div>
-        <div class="box" onclick="window.location.href = 'https://github.com/ftntdlp/dlp-test-files/blob/main/no-ssn-cc.zip?raw=true';">
-          <h3>ZIP File</h3>
-        </div>
-        <div class="box" onclick="window.open('https://github.com/ftntdlp/dlp-test-files/blob/main/no-ssn.txt?raw=true', '_blank');">
           <h3>TXT File</h3>
         </div>
       </div>
